Infrastructure kustomization added2

--- a/infrastructure/kyverno/v2.6.0/kyverno-release.yaml
+++ b/infrastructure/kyverno/v2.6.0/kyverno-release.yaml
@@ -11,7 +11,7 @@ spec:
       version: "2.6.x"
       sourceRef:
         kind: GitRepository
-        name: flux
+        name: flux-system
         namespace: flux-system
   install:
     crds: Create
