Change policies release version of voldemort

--- a/policies/voldemort/kustomization.yaml
+++ b/policies/voldemort/kustomization.yaml
@@ -7,3 +7,5 @@ configMapGenerator:
     behavior: replace
     files:
       - values.yaml=policies-values.yaml
+patchesStrategicMerge:
+  - policies-release-patch.yaml
